--- a/training/pytorch-2-0-bert-text-classification.ipynb
+++ b/training/pytorch-2-0-bert-text-classification.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +29,7 @@
     "\n",
     "This allows PyTorch 2.0 to achieve a 1.3x-2x training time speedups supporting [today's 46 model architectures](https://github.com/pytorch/torchdynamo/issues/681) from [HuggingFace Transformers](https://github.com/huggingface/transformers)\n",
     "\n",
-    "If you want to learn more about PyTorch 2.0, check out the official [“GET STARTED”](https://pytorch.org/get-started/pytorch-2.0/). We expect to ship the first stable 2.0 release in early March 2023.\n",
+    "If you want to learn more about PyTorch 2.0, check out the official [“GET STARTED”](https://pytorch.org/get-started/pytorch-2.0/).\n",
     "\n",
     "---\n",
     "\n",
@@ -38,17 +39,17 @@
     "\n",
     "## Setup environment & install Pytorch 2.0\n",
     "\n",
-    "Our first step is to install PyTorch 2.0 and the Hugging Face Libraries, including `transformers` and `datasets`. At the time of writing this, PyTorch 2.0 has no official release, but we can install it from the nightly version. The current expectation is a public release of PyTorch 2.0 in March 2023."
+    "Our first step is to install PyTorch 2.0 and the Hugging Face Libraries, including `transformers` and `datasets`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install PyTorch 2.0\n",
-    "!pip install numpy --pre torch[dynamo] --force-reinstall --extra-index-url https://download.pytorch.org/whl/nightly/cu117"
+    "!pip install \"torch>=2.0\" --extra-index-url https://download.pytorch.org/whl/cu117 --upgrade --quiet"
    ]
   },
   {
@@ -65,8 +66,7 @@
    "outputs": [],
    "source": [
     "# Install transformers and dataset\n",
-    "!pip install git+https://github.com/huggingface/transformers.git@main --upgrade \n",
-    "!pip install datasets evaluate tensorboard scikit-learn \n",
+    "!pip install \"transformers==4.27.1\" \"datasets==2.9.0\" \"accelerate==0.17.1\" \"evaluate==0.4.0\" tensorboard scikit-learn --upgrade --quiet\n",
     "# Install git-fls for pushing model and logs to the hugging face hub\n",
     "!sudo apt-get install git-lfs --yes"
    ]
@@ -105,9 +105,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/ff44c4421d7e70aa810b0fa79d36908a38b87aff8125d002cd44f7fcd31f493c)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.006680011749267578,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 2,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb078f1a17c3458281a72d6a38246fe2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train dataset size: 10003\n",
+      "Test dataset size: 3080\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -130,9 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'Why am I getting declines when trying to make a purchase online?',\n",
+       " 'label': 27}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "\n",
@@ -259,11 +318,12 @@
     "    output_dir=repository_id,\n",
     "    per_device_train_batch_size=16,\n",
     "    per_device_eval_batch_size=8,\n",
-    "    fp16=True,\n",
     "    learning_rate=5e-5,\n",
     "\t\tnum_train_epochs=3,\n",
-    "\t\t# PyTorch 2.0\n",
-    "\t\ttorch_compile=True, \n",
+    "\t\t# PyTorch 2.0 specifics \n",
+    "    bf16=True, # bfloat16 training \n",
+    "\t\ttorch_compile=True, # optimizations\n",
+    "    optim=\"adamw_torch_fused\", # improved optimizer \n",
     "    # logging & evaluation strategies\n",
     "    logging_dir=f\"{repository_id}/logs\",\n",
     "    logging_strategy=\"steps\",\n",
@@ -310,24 +370,27 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "![tensorboard](../assets/tensorboard.png)\n",
     "\n",
-    "We also ran the training without the `torch_compile` option to compare the training times. The training without `torch_compile` took 696 seconds, had a `train_samples_per_second` value of 43.1 and an `f1` score of `0.929`.\n",
+    "Using Pytorch 2.0 and supported features in `transformers` allows us train our BERT model on `10_000` samples within `457.7964` seconds. \n",
+    "\n",
+    "We also ran the training without the `torch_compile` option to compare the training times. The training without `torch_compile` took 457 seconds, had a `train_samples_per_second` value of 65.55 and an `f1` score of `0.931`.\n",
     "\n",
     "```bash\n",
     "{'train_runtime': 696.2701, 'train_samples_per_second': 43.1, 'eval_f1': 0.928788}\n",
     "```\n",
     "\n",
-    "By using the `torch_compile` option, we can see that the training time is reduced by 15% compared to the training without `torch_compile`. \n",
+    "By using the `torch_compile` option and the `adamw_torch_fused` optimized , we can see that the training time is reduced by 52.5% compared to the training without PyTorch 2.0. \n",
     "\n",
     "```bash\n",
-    "{'train_runtime': 596.5645, 'train_samples_per_second': 50.3, 'eval_f1': 0.939242}\n",
+    "{'train_runtime': 457.7964, 'train_samples_per_second': 65.55, 'eval_f1': 0.931773}\n",
     "```\n",
     "\n",
-    "Our absoulte training time went down from 696s to 596s. The `train_samples_per_second` value increased from 43 to 50. The `f1` score is the same/slighty better than the training without `torch_compile`.\n",
+    "Our absoulte training time went down from 696s to 510s. The `train_samples_per_second` value increased from 43 to 59. The `f1` score is the same/slighty better than the training without `torch_compile`.\n",
     "\n",
     "Pytorch 2.0 is incredible powerful! 🚀 \n",
     "\n",
@@ -357,9 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'card_arrival', 'score': 0.9903606176376343}]\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import pipeline\n",
     "\n",
@@ -371,20 +442,21 @@
     "\n",
     "pred = classifier(sample)\n",
     "print(pred)\n",
-    "# [{'label': 'card_arrival', 'score': 0.6293240189552307}]"
+    "# [{'label': 'card_arrival', 'score': 0.9903606176376343}]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Conclusion\n",
     "\n",
-    "In this tutorial, we learned how to use PyTorch 2.0 to train a text classification model on the BANKING77 dataset. We saw that PyTorch 2.0 is a powerful tool to speed up your training times. In our example running on a NVIDIA A10G we managed to achieve 14% better performance. The Hugging Face Trainer allows you to easily integrate PyTorch 2.0 into your training pipeline by simply adding the `torch_compile` option to the `TrainingArguments`. \n",
+    "In this tutorial, we learned how to use PyTorch 2.0 to train a text classification model on the BANKING77 dataset. We saw that PyTorch 2.0 is a powerful tool to speed up your training times. In our example running on a NVIDIA A10G we managed to achieve 52.5% better performance. The Hugging Face Trainer allows you to easily integrate PyTorch 2.0 into your training pipeline by simply adding the `torch_compile` option to the `TrainingArguments`. We can further benefit from PyTorch 2.0 by using the new fused AdamW optimizer when bf16 is available. \n",
     "\n",
-    "Additionally, I want to mentioned that we reduced the training time by 14%, which could be interpreted in a cost saving of 14% for the training or in 14% faster iterations cycles and time to production. You should be able to see even better improvements by using A100 GPUs or by reducing the \"Trainer\" overhead, e.g. removing evaluation and logging decreases the time down to `364s`. \n",
+    "Additionally, I want to mentioned that we reduced the training time by 14%, which could be interpreted in a cost saving of 14% for the training or in 14% faster iterations cycles and time to production. You should be able to see even better improvements by using A100 GPUs or by reducing the \"Trainer\" overhead, e.g. removing evaluation and logging. \n",
     "\n",
-    "PyTorch 2.0 is not officially launched, but we are excited to see what the future brings. 🚀"
+    "PyTorch 2.0 is now officially launched and we are excited to see what the future brings. 🚀"
    ]
   },
   {
@@ -395,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('base')",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -409,12 +481,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+    "hash": "2d58e898dde0263bc564c6968b04150abacfd33eed9b19aaa8e45c040360e146"
    }
   }
  },
