--- a/training/pytorch-2-0-bert-text-classification.ipynb
+++ b/training/pytorch-2-0-bert-text-classification.ipynb
@@ -390,7 +390,7 @@
     "{'train_runtime': 457.7964, 'train_samples_per_second': 65.55, 'eval_f1': 0.931773}\n",
     "```\n",
     "\n",
-    "Our absoulte training time went down from 696s to 510s. The `train_samples_per_second` value increased from 43 to 59. The `f1` score is the same/slighty better than the training without `torch_compile`.\n",
+    "Our absoulte training time went down from 696s to 457. The `train_samples_per_second` value increased from 43 to 59. The `f1` score is the same/slighty better than the training without `torch_compile`.\n",
     "\n",
     "Pytorch 2.0 is incredible powerful! 🚀 \n",
     "\n",
@@ -454,7 +454,7 @@
     "\n",
     "In this tutorial, we learned how to use PyTorch 2.0 to train a text classification model on the BANKING77 dataset. We saw that PyTorch 2.0 is a powerful tool to speed up your training times. In our example running on a NVIDIA A10G we managed to achieve 52.5% better performance. The Hugging Face Trainer allows you to easily integrate PyTorch 2.0 into your training pipeline by simply adding the `torch_compile` option to the `TrainingArguments`. We can further benefit from PyTorch 2.0 by using the new fused AdamW optimizer when bf16 is available. \n",
     "\n",
-    "Additionally, I want to mentioned that we reduced the training time by 14%, which could be interpreted in a cost saving of 14% for the training or in 14% faster iterations cycles and time to production. You should be able to see even better improvements by using A100 GPUs or by reducing the \"Trainer\" overhead, e.g. removing evaluation and logging. \n",
+    "Additionally, I want to mentioned that we reduced the training time by 52%, which could be interpreted in a cost saving of 52% for the training or in 52% faster iterations cycles and time to production. You should be able to see even better improvements by using A100 GPUs or by reducing the \"Trainer\" overhead, e.g. removing evaluation and logging. \n",
     "\n",
     "PyTorch 2.0 is now officially launched and we are excited to see what the future brings. 🚀"
    ]
