--- a/training/flan-t5-samsum-summarization.ipynb
+++ b/training/flan-t5-samsum-summarization.ipynb
@@ -399,6 +399,7 @@
     "trainer = Seq2SeqTrainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
+    "    data_collator=data_collator,\n",
     "    train_dataset=tokenized_dataset[\"train\"],\n",
     "    eval_dataset=tokenized_dataset[\"test\"],\n",
     "    compute_metrics=compute_metrics,\n",
