--- a/training/peft-flan-t5-int8-summarization.ipynb
+++ b/training/peft-flan-t5-int8-summarization.ipynb
@@ -326,8 +326,7 @@
     "    output_dir=output_dir,\n",
     "\t\tauto_find_batch_size=True,\n",
     "    learning_rate=1e-3, # higher learning rate\n",
-    "    # num_train_epochs=5,\n",
-    "    max_steps=10,\n",
+    "    num_train_epochs=5,\n",
     "    logging_dir=f\"{output_dir}/logs\",\n",
     "    logging_strategy=\"steps\",\n",
     "    logging_steps=500,\n",
@@ -355,58 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/pytorch/lib/python3.9/site-packages/transformers/optimization.py:391: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
-      "You're using a T5TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      "/opt/conda/envs/pytorch/lib/python3.9/site-packages/bitsandbytes/autograd/_functions.py:298: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
-      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='10' max='10' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [10/10 00:37, Epoch 0/1]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=10, training_loss=1.2569419860839843, metrics={'train_runtime': 44.6821, 'train_samples_per_second': 1.79, 'train_steps_per_second': 0.224, 'total_flos': 1354457866567680.0, 'train_loss': 1.2569419860839843, 'epoch': 0.01})"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train model\n",
     "trainer.train()"
@@ -424,22 +374,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('results/tokenizer_config.json',\n",
-       " 'results/special_tokens_map.json',\n",
-       " 'results/tokenizer.json')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save our LoRA model & tokenizer results\n",
     "peft_model_id=\"results\"\n",
@@ -465,9 +402,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Overriding torch_dtype=None with `torch_dtype=torch.float16` due to requirements of `bitsandbytes` to enable model loading in mixed int8. Either pass torch_dtype=torch.float16 or don't pass this argument at all to remove this warning.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.005097389221191406,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Loading checkpoint shards",
+       "rate": null,
+       "total": 12,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f842ee6838b24491b6651b782a05dc7e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/12 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peft model loaded\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from peft import PeftModel, PeftConfig\n",
@@ -498,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +497,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.005949497222900391,
+       "elapsed": 0.005249500274658203,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -528,7 +511,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9080e77f8675417ab451e1f3b75562d2",
+       "model_id": "c1ca895aa67441bca47da84693b8c4ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,25 +526,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input sentence: Augustine: Guys, remember it's Wharton's bday next week?\n",
-      "Darlene: yay, a party!\n",
-      "Heather: yay! crap we need to buy him a present\n",
-      "Walker: he mentioned paper shredder once\n",
-      "Augustine: wtf?!?\n",
-      "Walker: he did really. for no reason at all.\n",
-      "Heather: whatever that make him happy\n",
-      "Darlene: cool with me. we can shred some papers at the party \n",
-      "Augustine: so much fun\n",
-      "Heather: srsly guys, you mean we should really get office equipment???\n",
-      "Darlene: Walk, ask him if he really wnts it and if he yes then we get it\n",
-      "Walker: i heard him say that. wasn;t drunk. me neither.\n",
-      "Darlene: but better ask him twice\n",
-      "Walker: will do\n",
-      "Augustine: 2moro ok?\n",
-      "Darlene: and sure ask ab the party!\n",
+      "input sentence: Holt: ladies, an important question. what to get my sis for bday?\n",
+      "Darla: how old?\n",
+      "Holt: 21\n",
+      "Olive: can't be too personal\n",
+      "Treena: cosmetics maybe?\n",
+      "Zula: i'd get her DVDs or book series. always works\n",
+      "Holt: you might be right. set of DVDs and some cosmetics?\n",
+      "Olive: we'd all be happy i guess if you know what she likes\n",
       "------------------------------------------------------------\n",
       "summary:\n",
-      "Wharton's birthday is next week.\n"
+      "Holt will buy her 21-year-old\n"
      ]
     }
    ],
@@ -592,24 +567,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 819/819 [44:31<00:00,  3.26s/it]\n"
+      "100%|██████████| 819/819 [46:14<00:00,  3.39s/it] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rogue1: 48.462287%\n",
-      "rouge2: 22.212533%\n",
-      "rougeL: 38.916793%\n",
-      "rougeLsum: 38.962727%\n"
+      "Rogue1: 50.386161%\n",
+      "rouge2: 24.842412%\n",
+      "rougeL: 41.370130%\n",
+      "rougeLsum: 41.394230%\n"
      ]
     }
    ],
@@ -659,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our PEFT fine-tuned FLAN-T5-XXL achieved a rogue1 score of `12.34%` on the test dataset. For comparison a [full fine-tuning of flan-t5-base achieved a rouge1 score of 47.23](https://www.philschmid.de/fine-tune-flan-t5). That is a `5%` improvements. \n",
+    "Our PEFT fine-tuned FLAN-T5-XXL achieved a rogue1 score of `50.38%` on the test dataset. For comparison a [full fine-tuning of flan-t5-base achieved a rouge1 score of 47.23](https://www.philschmid.de/fine-tune-flan-t5). That is a `3%` improvements. \n",
     "\n",
     "It is incredible to see that our LoRA checkpoint is only 84MB small and model achieves better performance than a smaller fully fine-tuned model."
    ]
