peft example finished

--- a/training/peft-flan-t5-int8-summarization.ipynb
+++ b/training/peft-flan-t5-int8-summarization.ipynb
@@ -122,26 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /home/ubuntu/.cache/huggingface/datasets/samsum/samsum/0.0.0/f1d7c6b7353e6de335d444e424dc002ef70d1277109031327bc9cc6af5d3d46e/cache-6c24681d1afc57c3.arrow\n",
-      "Loading cached processed dataset at /home/ubuntu/.cache/huggingface/datasets/samsum/samsum/0.0.0/f1d7c6b7353e6de335d444e424dc002ef70d1277109031327bc9cc6af5d3d46e/cache-3a05e84854157d11.arrow\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max source length: 255\n",
-      "Max target length: 50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import concatenate_datasets\n",
     "import numpy as np\n",
@@ -241,17 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trainable params: 18874368 || all params: 11154206720 || trainable%: 0.16921300163961817\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from peft import LoraConfig, get_peft_model, prepare_model_for_int8_training, TaskType\n",
     "\n",
@@ -286,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,55 +377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Overriding torch_dtype=None with `torch_dtype=torch.float16` due to requirements of `bitsandbytes` to enable model loading in mixed int8. Either pass torch_dtype=torch.float16 or don't pass this argument at all to remove this warning.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005097389221191406,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Loading checkpoint shards",
-       "rate": null,
-       "total": 12,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f842ee6838b24491b6651b782a05dc7e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/12 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Peft model loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from peft import PeftModel, PeftConfig\n",
@@ -481,65 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset samsum (/home/ubuntu/.cache/huggingface/datasets/samsum/samsum/0.0.0/f1d7c6b7353e6de335d444e424dc002ef70d1277109031327bc9cc6af5d3d46e)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005249500274658203,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 3,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1ca895aa67441bca47da84693b8c4ee",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input sentence: Holt: ladies, an important question. what to get my sis for bday?\n",
-      "Darla: how old?\n",
-      "Holt: 21\n",
-      "Olive: can't be too personal\n",
-      "Treena: cosmetics maybe?\n",
-      "Zula: i'd get her DVDs or book series. always works\n",
-      "Holt: you might be right. set of DVDs and some cosmetics?\n",
-      "Olive: we'd all be happy i guess if you know what she likes\n",
-      "------------------------------------------------------------\n",
-      "summary:\n",
-      "Holt will buy her 21-year-old\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset \n",
     "from random import randrange\n",
@@ -567,27 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 819/819 [46:14<00:00,  3.39s/it] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rogue1: 50.386161%\n",
-      "rouge2: 24.842412%\n",
-      "rougeL: 41.370130%\n",
-      "rougeLsum: 41.394230%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import evaluate\n",
     "import numpy as np\n",
@@ -613,6 +468,7 @@
     "test_dataset = load_from_disk(\"data/eval/\").with_format(\"torch\")\n",
     "\n",
     "# run predictions\n",
+    "# this can take ~45 minutes\n",
     "predictions, references = [] , []\n",
     "for sample in tqdm(test_dataset):\n",
     "    p,l = evaluate_peft_model(sample)\n",
@@ -626,7 +482,12 @@
     "print(f\"Rogue1: {rogue['rouge1']* 100:2f}%\")\n",
     "print(f\"rouge2: {rogue['rouge2']* 100:2f}%\")\n",
     "print(f\"rougeL: {rogue['rougeL']* 100:2f}%\")\n",
-    "print(f\"rougeLsum: {rogue['rougeLsum']* 100:2f}%\")\n"
+    "print(f\"rougeLsum: {rogue['rougeLsum']* 100:2f}%\")\n",
+    "\n",
+    "# Rogue1: 50.386161%\n",
+    "# rouge2: 24.842412%\n",
+    "# rougeL: 41.370130%\n",
+    "# rougeLsum: 41.394230%"
    ]
   },
   {
@@ -661,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 | packaged by conda-forge | (main, Feb  1 2023, 21:39:03) \n[GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
