--- a/training/peft-flan-t5-int8-summarization.ipynb
+++ b/training/peft-flan-t5-int8-summarization.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# install Hugging Face Libraries\n",
-    "!pip install  git+https://github.com/huggingface/peft.git\n",
+    "!pip install \"peft==0.2.0\"\n",
     "!pip install \"transformers==4.27.1\" \"datasets==2.9.0\" \"accelerate==0.17.1\" \"evaluate==0.4.0\" \"bitsandbytes==0.37.1\" loralib --upgrade --quiet\n",
     "# install additional dependencies needed for training\n",
     "!pip install rouge-score tensorboard py7zr "
