--- a/training/peft-falcon-7b-int4.ipynb
+++ b/training/peft-falcon-7b-int4.ipynb
@@ -110,12 +110,12 @@
    "outputs": [],
    "source": [
     "def format_dolly(sample):\n",
-    "  instruction = f\"### Instruction\\n{sample['instruction']}\"\n",
-    "  context = f\"### Context\\n{sample['context']}\" if len(sample['context']) > 0 else None\n",
-    "  response = f\"### Answer\\n{sample['response']}\"\n",
-    "  # join all the parts together\n",
-    "  prompt = \"\\n\\n\".join([i for i in [instruction, context, response] if i is not None])\n",
-    "  return prompt"
+    "    instruction = f\"### Instruction\\n{sample['instruction']}\"\n",
+    "    context = f\"### Context\\n{sample['context']}\" if len(sample[\"context\"]) > 0 else None\n",
+    "    response = f\"### Answer\\n{sample['response']}\"\n",
+    "    # join all the parts together\n",
+    "    prompt = \"\\n\\n\".join([i for i in [instruction, context, response] if i is not None])\n",
+    "    return prompt\n"
    ]
   },
   {
@@ -195,28 +195,9 @@
     ")\n",
     "\n",
     "# Load model and tokenizer\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, device_map={\"\":0},    trust_remote_code=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, device_map={\"\":0}, trust_remote_code=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `SFTTrainer` also supports a native integration with `peft`, which makes it super easy to efficiently instruction tune LLMs. We prepared a [run_clm_fsdp_lora.py](./scripts/run_clm_fsdp_lora.py), which implements causal language modeling and accepts all relevant parameters, including the model id, peft configuration. The `SFTTrainer` part in our scripts looks like this:\n",
-    "\n",
-    "```python\n",
-    "trainer = SFTTrainer(\n",
-    "    model, # our loaded model\n",
-    "    args=training_args, # our training args\n",
-    "    train_dataset=dataset, # raw training dataset\n",
-    "    formatting_func=format_dolly, # formatting function\n",
-    "    peft_config=peft_config, # peft config\n",
-    "    packing=True, # wether to pack data samples to max length\n",
-    "    max_seq_length=2048 # max sequence length for packing\n",
-    ")\n",
-    "```\n"
    ]
   },
   {
@@ -224,8 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://colab.research.google.com/drive/1BiQiw31DT7-cDp1-0ySXvvhzqomTdI-o?usp=sharing#scrollTo=dQdvjTYTT1vQ\n",
-    "https://gist.github.com/pacman100/1731b41f7a90a87b457e8c5415ff1c14"
+    "The `SFTTrainer` also supports a native integration with `peft`, which makes it super easy to efficiently instruction tune LLMs. We only need to create our `LoRAConfif` and provide it to the trainer. \n",
+    "\n",
+    "According to QLoRA paper, it is important to consider all linear layers in the transformer block for maximum performance. Therefore we will add `dense`, `dense_h_to_4_h` and `dense_4h_to_h` layers in the target modules in addition to the mixed `query_key_value` layer.\n"
    ]
   },
   {
@@ -234,21 +216,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%bash\n",
-    "!python scripts/run_clm_fsdp_lora.py \\\n",
-    " --model_id tiiuae/falcon-7b \\\n",
-    " --dataset_id \"databricks/databricks-dolly-15k\" \\\n",
-    " --per_device_train_batch_size 1 \\\n",
-    " --num_train_epochs 1 \\\n",
-    " --learning_rate 2e-4 \\\n",
-    " --gradient_checkpointing True \\\n",
-    " --bf16 True \\\n",
-    " --tf32 True \\\n",
-    " --output_dir ./tmp \\\n",
-    " --logging_steps 10\n",
-    " \n",
-    " \n",
-    " #--optim adamw_apex_fused \\"
+    "from peft import LoraConfig\n",
+    "\n",
+    "peft_config = LoraConfig(\n",
+    "    lora_alpha=16,\n",
+    "    lora_dropout= 0.1,\n",
+    "    r=64,\n",
+    "    bias=\"none\",\n",
+    "    task_type=\"CAUSAL_LM\",\n",
+    "    target_modules=[\n",
+    "        \"query_key_value\",\n",
+    "        \"dense\",\n",
+    "        \"dense_h_to_4h\",\n",
+    "        \"dense_4h_to_h\",\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we can start our training we need to define the hyperparameters (`TrainingArguments`) we want to use."
    ]
   },
   {
@@ -257,28 +247,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
+    "from transformers import TrainingArguments\n",
     "\n",
-    "MODEL_ID=\"tiiuae/falcon-40b\"\n",
-    "DATASET_ID=\"databricks/databricks-dolly-15k\"\n",
-    "NUM_GPUS=8\n",
+    "per_device_train_batch_size = 4\n",
+    "gradient_accumulation_steps = 4\n",
+    "optim = \"paged_adamw_32bit\"\n",
+    "save_steps = 10\n",
+    "logging_steps = 10\n",
+    "learning_rate = 2e-4\n",
+    "max_grad_norm = 0.3\n",
+    "max_steps = 500\n",
+    "warmup_ratio = 0.03\n",
+    "lr_scheduler_type = \"constant\"\n",
     "\n",
-    "echo \"Training ${MODEL_ID} on ${DATASET_ID} using ${NUM_GPUS} GPU.\n",
+    "args = TrainingArguments(\n",
+    "    output_dir=\"falcon-7b-int4-dolly\",\n",
+    "    num_train_epochs=3,\n",
+    "    per_device_train_batch_size=4,\n",
+    "    gradient_accumulation_steps=4,\n",
+    "    gradient_checkpointing=True,\n",
+    "    optim=\"paged_adamw_32bit\",\n",
+    "    logging_steps=10,\n",
+    "    save_strategy=\"epoch\",\n",
+    "    learning_rate=2e-4,\n",
+    "    bf16=True,\n",
+    "    tf32=True,\n",
+    "    max_grad_norm=0.3,\n",
+    "    warmup_ratio=0.03,\n",
+    "    lr_scheduler_type=\"constant\",\n",
+    "    group_by_length=True,\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now have every building block we need to create our `SFTTrainer` to then start training our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trl import SFTTrainer\n",
     "\n",
-    "torchrun --nproc_per_node ${NUM_GPUS} scripts/run_clm_fsdp_lora.py \\\n",
-    "  --model_id ${MODEL_ID} \\\n",
-    "  --dataset_id ${DATASET_ID} \\\n",
-    "  --per_device_train_batch_size 1 \\\n",
-    "  --num_train_epochs 1 \\\n",
-    "  --learning_rate 2e-4 \\\n",
-    "  --gradient_checkpointing True \\\n",
-    "  --bf16 True \\\n",
-    "  --tf32 True \\\n",
-    "  --output_dir ./tmp \\\n",
-    "  --logging_steps 10 \\\n",
-    "  --fsdp \"full_shard auto_wrap\" \\\n",
-    "  --fsdp_transformer_layer_cls_to_wrap \"DecoderLayer\"\n",
-    "  # --optim adamw_apex_fused \\"
+    "max_seq_length = 2048 # max sequence length for model and packing of the dataset\n",
+    "\n",
+    "trainer = SFTTrainer(\n",
+    "    model=model,\n",
+    "    train_dataset=dataset,\n",
+    "    peft_config=peft_config,\n",
+    "    packing=True,\n",
+    "    max_seq_length=max_seq_length,\n",
+    "    tokenizer=tokenizer,\n",
+    "    formatting_func=format_dolly,  # formatting function\n",
+    "    args=args,\n",
+    ")\n",
+    "\n",
+    "# print trainable parameters\n",
+    "trainer.model.print_trainable_parameters()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start training our model by calling the `train()` method on our `SFTTrainer` instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train\n",
+    "trainer.train()"
    ]
   },
   {
@@ -310,15 +359,14 @@
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
     "# Load peft config for pre-trained checkpoint etc. \n",
-    "peft_model_id = \"tmp\"\n",
-    "config = PeftConfig.from_pretrained(peft_model_id)\n",
+    "config = PeftConfig.from_pretrained(args.output_dir)\n",
     "\n",
     "# load base LLM model and tokenizer\n",
     "model = AutoModelForCausalLM.from_pretrained(config.base_model_name_or_path,device_map=\"auto\", torch_dtype=torch.bfloat16)\n",
     "tokenizer = AutoTokenizer.from_pretrained(config.base_model_name_or_path)\n",
     "\n",
     "# Load the Lora model\n",
-    "model = PeftModel.from_pretrained(model, peft_model_id, device_map={\"\":0})\n",
+    "model = PeftModel.from_pretrained(model, args.output_dir, device_map={\"\":0})\n",
     "model.eval()\n",
     "\n",
     "print(\"Peft model loaded\")"
